manifests/hello-example/deployment.yaml
# v0.2.0 alb-controller hello example deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2 # just to see load balancing
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m # 5% of a single core. 1000 = 1 vCPU
              memory: 64Mi # mebibytes, not megabytes
            limits:
              cpu: 100m
              memory: 128Mi
