manifests/hello-example/service.yaml
# v0.2.0 alb-controller hello example service
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
